manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serveurflex-ingress
  namespace: serverflex
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: localhost   # <- change to your domain or remove "host" to accept any host
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
